# Konnect

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_TOOL_SUMMARY.md  Anchor.toml  DEPLOYMENT.md  Dockerfile  Onchain_README.md  README.md  RECOMMENDATIONS.md  SETUP_GUIDE.md  alembic.ini  app.json  celery_worker.py  demo_agent_tools.py  demo_recommendations.py  demo_user_activity.py  deploy_fixes.py  docker-compose.yml  eas.json  full_e2e_test.py  idl.json  index.html  konnect-prd.md  main.py  package-lock.json  package.json  polyfills.ts  pyproject.toml  render.yaml  requirements.txt  test_agent_tools.py  test_database.py  test_main.py  test_models.py  test_opentelemetry.py  test_solana.py  vite.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1f105115d563_initial_migration_with_user_marketplace_.py  2d63b83b1567_add_user_reviews_and_wishlist_tables.py  5d6636fa3ec9_add_fraud_reports_table.py  add_gamification_and_supporting_tables.py  f2727a37c315_add_listing_images_and_messages_tables.py
android/: settings.gradle
android/app/: build.gradle
api/: ai.ts  auth.ts  listings.ts  marketplace.ts  order.ts  user.ts
app/: _layout.tsx  checkout.tsx  index.tsx
app/(onboarding)/: _layout.tsx  auth.tsx  redirect.tsx  request-marketplace.tsx  role-selection.tsx  splash.tsx  university-selection.tsx  welcome.tsx
app/(tabs)/: _layout.tsx  add-listing.tsx  cart.tsx  dashboard.tsx  index.tsx  listings.tsx  orders.tsx  profile.tsx  search.tsx
app/escrow-status/: [id].tsx
app/order-tracking/: [id].tsx
app/product/: [id].tsx
components/: ConnectionProvider.tsx  MobileWalletAdapter.tsx  ProductCard.tsx  Sections.tsx  SolanaProvider.tsx  WalletButton.tsx
components/account/: AccountDataAccess.tsx  AccountDetails.tsx  AccountUI.tsx
components/cluster/: cluster-data-access.tsx
components/sign-in/: SignInFeature.tsx  SignInUI.tsx
components/top-bar/: TopBar.tsx  TopBarUI.tsx
components/ui/: AppModal.tsx  Button.tsx  Card.tsx  Input.tsx  KeyboardView.tsx
constants/: Colors.ts  MockData.ts  storageKeys.ts
hooks/: useAnchorProvider.tsx  useAuthorization.tsx  useMarketPlace.ts  useMobileWallet.tsx  useReleaseOrder.ts  useSmartContract.ts
interface/: marketplace.ts  orders.ts
ios/: Podfile
ios/konnect/: Info.plist
ios/konnect.xcodeproj/: project.pbxproj
ios/konnect.xcworkspace/: contents.xcworkspacedata
konnect/: __init__.py  agent_tools.py  auth.py  auth_utils.py  crud.py  database.py  dependencies.py  main.py  models.py  redis_client.py  schemas.py  solana_client.py  supabase_client.py  tasks.py
konnect/agents/: README.md  __init__.py  description_generation.py  description_generation_agent.yaml  fraud_detection.py  fraud_detection_agent.yaml  price_suggestion.py  price_suggestion_agent.yaml  recommendation.py  root_agent.yaml  semantic_search.py  semantic_search_agent.yaml
konnect/routers/: admin.py  agent.py  ai.py  auth.py  bills.py  delivery.py  fraud.py  gamification.py  images.py  listings.py  marketplaces.py  messages.py  notifications.py  orders.py  products.py  solana.py  users.py  wallet.py
lib/: axiosBase.ts  helpers.ts  schema.ts
migrations/: deploy.ts
programs/konnect/: Cargo.toml
programs/konnect/src/: lib.rs
scripts/: create_admin_user.py  create_marketplace_request.py  demo_recommendations.py  demo_user_activity.py  invoke_approve_marketplace_request.py  realtime_demo.py  run_agent.py  send_test_message.py  setup_admin_user.py  setup_supabase_storage.py  test_auth_fixes.py  test_render_deployment.py  test_supabase_connection.py
services/: StorageService.ts  solanaContract.ts
src/: App.tsx  ROUTING.md  index.css
src/app/: globals.css  layout.tsx  manifest.json  page.tsx
src/app/(main)/: layout.tsx
src/app/auth/: page.tsx
src/app/contexts/: UserContext.tsx
src/app/notifications/: page.tsx
src/app/role/: page.tsx
src/components/: AuthScreen.tsx  CoreFeature.tsx  DesktopSidebar.tsx  DesktopTopNav.tsx  Footer.tsx  HamburgerMenu.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Login.tsx  MainLayout.tsx  NotificationSetup.tsx  OnboardingTutorial.tsx  OrderTracking.tsx  PersonalInfo.tsx  ProductDetail.tsx  Registration.tsx  RegistrationForm.tsx  RoleSelection.tsx  ShowCase.tsx  Verification.tsx  WalletCreation.tsx  WalletSetup.tsx  WelcomeScreen.tsx
src/contexts/: CartContext.tsx  UserContext.tsx
src/lib/: contants.ts
supabase/: config.toml
supabase/migrations/: 20250920080000_initial_schema.sql  20250920090000_update_rls_policies.sql  20250920100000_enable_realtime.sql  20250924112026_broken_waterfall.sql  20250924112036_patient_breeze.sql  20250924112047_empty_silence.sql  20250924112058_tight_river.sql  20250924112104_mute_dawn.sql  20250924112112_shy_tooth.sql  20250924112117_white_pebble.sql  20250924112124_solitary_sound.sql
tests/: TEST.md  __init__.py  conftest.py  konnect.ts  test_agents.py  test_api.py  test_database.py  test_listings.py  test_main.py  test_models.py  test_opentelemetry.py  test_recommendations.py  test_user_activity.py
(+20 files in other folders)
