[tool.poetry]
name = "konnect"
version = "0.1.0"
description = "Campus Tools with SolanaPay"
authors = ["Mohammed Firdous <mohammedfirdouss@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = "^0.0.9"
google-adk = ">=1.0.0"
google-generativeai = ">=0.3.0"
supabase = "^2.19.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.43"
email-validator = ">=2.0.0"
openai = ">=1.0.0"
solana = "^0.36.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
ruff = ">=0.1.0"
opentelemetry-exporter-prometheus = "^0.58b0"
redis = "^6.4.0"
solana = "^0.36.9"
opentelemetry-instrumentation-fastapi = "^0.58b0"
celery = "^5.5.3"
python-json-logger = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --cov=konnect --cov-report=term-missing"
